syntax = "proto3";

package docker;
option go_package = "./pkg/proto";

service DockerService {
  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse) {}
  rpc GetContainers(GetContainersRequest) returns (GetContainersResponse) {}

}

message CreateContainerRequest {
  string name = 1;
  string image = 2;
}

message CreateContainerResponse {
  int64 status = 1;
  string error = 2;
  string container = 3;
}

message GetContainersRequest {}

message GetContainersResponse {
  repeated Container containers = 1;
}

message Container {
  string id = 1;
  string image = 2;
  string status = 3;
  string command = 4;
  int64 created = 5;
  string state = 6;
  repeated string names = 7;
}